succAKM/akmLine/common/log/oldLog/runall_p1432.log.error.log
[CRITICAL]2021-03-12 16:28:40,614: import main_button failed, path: button cause a error: invalid syntax (main_button.py, line 81)
pid=1432, ppid=3320, tid=3160
Traceback (most recent call last):
  File "D:\akmLine\common\run_all.py", line 39, in findModule
    __import__(m[1])
  File "D:\akmLine\button\main_button.py", line 81
    log.info('+++++loc':Current_loc)
                       ^
SyntaxError: invalid syntax

[CRITICAL]2021-03-12 16:28:40,624: import main_button failed, path: button ,cause invalid syntax (main_button.py, line 81)
